src/parse/snapshots/camello__parse__tests__success__pod__basic_pod.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=pod\nContent\n=cut"
