src/parse/snapshots/camello__parse__tests__success__pod__head1_title.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=head1 TITLE\nContent\n=cut"
