src/parse/snapshots/camello__parse__tests__success__pod__pod_at_eof.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  POD
    POD block "=pod\nContent without cut\n"
