src/parse/snapshots/camello__parse__tests__success__pod__pod_between_statements.pl.snap
---
source: src/parse/tests.rs
expression: rendered
---
ROOT
  VAR_DECL_STMT
    LIST_EXPR
      VAR_DECL
        `my` "my"
        DECL_TARGET
          SCALAR_VAR
            `$` "$"
            identifier "var"
    `;` ";"
  POD
    POD block "=pod\nContent\n=cut"
  VAR_DECL_STMT
    LIST_EXPR
      VAR_DECL
        `my` "my"
        DECL_TARGET
          SCALAR_VAR
            `$` "$"
            identifier "other"
    `;` ";"
